--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %}
 {% block body_content %}
-    <h1>Home Page</h1>
     <p>Welcome to this web app!</p>
+    {% for post in posts %}
         <div>
             <h3>{{ post.title }}</h3>
         </div>
 	<p>{{ post.content }}</p>
+    {% endfor %}
 {% endblock body_content %}
