--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<a href="{{ url_for('home') }}">Home</a> <a href="{{ url_for('about') }}">About</a> <a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a>
+	<a href="{{ url_for('home') }}">Home</a> <a href="{{ url_for('about') }}">About</a> <a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a> <a href="{{ url_for('post') }}">Post</a>
+
 <head>
 <title>{{ title }} - Page</title>
 </head>
