--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,10 +1,14 @@
 {% extends "layout.html" %}
 {% block body_content %}
     <p>Welcome to this web app!</p>
-    {% for post in posts %}
-        <div>
-            <h3>{{ post.title }}</h3>
-        </div>
-	<p>{{ post.content }}</p>
-    {% endfor %}
+    {% if posts %}
+        {% for post in posts %}
+	    <div>
+                <h3>{{ post.title }}</h3>
+            </div>
+	    <p>{{ post.content }}</p>
+        {% endfor %}
+    {% else %}
+        <p>No posts to currently display</p>
+    {% endif %}
 {% endblock body_content %}
