--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<a href="{{ url_for('home') }}">Home</a> <a href="{{ url_for('about') }}">About</a> <a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a> <a href="{{ url_for('post') }}">Post</a>
+	<div class=navbar>
+		{% if current_user.is_authenticated %}
+			<a href="{{ url_for('home') }}">Home</a>
+			<a href="{{ url_for('about') }}">About</a>
+			<a href="{{ url_for('logout') }}">Logout</a>
+			<a href="{{ url_for('post') }}">Post</a>
+		{% else %}
+			<a href="{{ url_for('home') }}">Home</a>
+			<a href="{{ url_for('about') }}">About</a>
+			<a href="{{ url_for('login') }}">Login</a>
+			<a href="{{ url_for('register') }}">Register</a>
+		{% endif %}
+	</div>
 
 <head>
 <title>{{ title }} - Page</title>
