--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -3,11 +3,14 @@
     <p>Welcome to this web app!</p>
     {% if posts %}
         {% for post in posts %}
-	    <div>
-                <h3>{{ post.title }}</h3>
-            </div>
-	    <p>{{ post.content }}</p>
-        {% endfor %}
+    	    <div>
+       	 	<h3>{{ post.title }}</h3>
+        	<span>by <i>{{ post.author.first_name }} {{ post.author.last_name }}</i></span>
+        	<span>on the <i>{{ post.date_posted }}</i></span>
+        	<p>{{ post.content }}</p>
+    	    </div>
+	{% endfor %}
+
     {% else %}
         <p>No posts to currently display</p>
     {% endif %}
