--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -4,6 +4,37 @@
     <div class='form'>
         <form method='POST' action=''>
             {{ form.hidden_tag() }}
+	    {{ form.first_name.label }}
+            {{ form.first_name }}
+            {% if form.first_name.errors %}
+            <!-- surround the displayed errors in a error div tag, this can then be styled later to be red etc. -->
+            <div class="error">
+                <!-- for each error in the errors for the first_name input field -->
+                {% for error in form.first_name.errors %}
+                    <!-- display the error -->
+                    <span>{{ error }}</span>
+                <!-- end the for-loop -->
+                {% endfor %}
+                </div>
+            <!-- end the if statement -->
+            {% endif %}
+            <br>
+            {{ form.last_name.label }}
+            {{ form.last_name }}
+            {% if form.last_name.errors %}
+            <!-- surround the displayed errors in a error div tag, this can then be styled later to be red etc. -->
+            <div class="error">
+                <!-- for each error in the errors for the first_name input field -->
+                {% for error in form.last_name.errors %}
+                    <!-- display the error -->
+                    <span>{{ error }}</span>
+                <!-- end the for-loop -->
+                {% endfor %}
+            </div>
+            <!-- end the if statement -->
+            {% endif %}
+            <br>
+
             <div class='form_group'>
                 {{ form.email.label }}
                 {{ form.email }}
