--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 	<div class=navbar>
@@ -6,6 +7,7 @@
 			<a href="{{ url_for('about') }}">About</a>
 			<a href="{{ url_for('logout') }}">Logout</a>
 			<a href="{{ url_for('post') }}">Post</a>
+			<a href="{{ url_for('account') }}">Account </a>
 		{% else %}
 			<a href="{{ url_for('home') }}">Home</a>
 			<a href="{{ url_for('about') }}">About</a>
