--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body_content %}
-    <p>Welcome to this web app!</p>
+    <p>Welcome to this web app edited!</p>
     {% if posts %}
         {% for post in posts %}
     	    <div>
