--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block body_content %}
-    <p1> All about my web app! </p1>
+    <p1> Testing web hooks! </p1>
 {% endblock %}
